Fix manifestation scroll on iOS

--- a/src/static/scss/components/_manifestation-page.scss
+++ b/src/static/scss/components/_manifestation-page.scss
@@ -45,6 +45,7 @@
 
   & > .content {
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 
     height: calc(100% - 55px);
     padding: 0 8vw 0 8vw;
